# f4w-podcast-downloader

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml  tests.yml
F4WPodcastDownloader/: asgi.py  settings.py  urls.py  wsgi.py
apps/podcastDownloader/: cookieStore.py  runner.py
podcastDownloader/: cookieStore.py  runner.py  showConfig.json  util.py
test/: conftest.py  test_runner.py  test_util.py
